@@ -29,7 +29,6 @@ package org.hisp.dhis.resourcetable;
 
 import static java.time.temporal.ChronoUnit.YEARS;
 import static java.util.Comparator.reverseOrder;
-import static java.util.stream.Collectors.toList;
 import static org.hisp.dhis.period.PeriodDataProvider.DataSource.DATABASE;
 import static org.hisp.dhis.period.PeriodDataProvider.DataSource.SYSTEM_DEFINED;
 import static org.hisp.dhis.scheduling.JobProgress.FailurePolicy.SKIP_ITEM;
@@ -280,7 +279,7 @@ public class DefaultResourceTableService implements ResourceTableService {
   public void createAllSqlViews(JobProgress progress) {
     List<SqlView> nonQueryViews =
         new ArrayList<>(sqlViewService.getAllSqlViewsNoAcl())
-            .stream().sorted().filter(view -> !view.isQuery()).collect(toList());
+            .stream().sorted().filter(view -> !view.isQuery()).toList();
 
     progress.startingStage("Create SQL views", nonQueryViews.size(), SKIP_ITEM);
     progress.runStage(
@@ -303,7 +302,7 @@ public class DefaultResourceTableService implements ResourceTableService {
   public void dropAllSqlViews(JobProgress progress) {
     List<SqlView> nonQueryViews =
         new ArrayList<>(sqlViewService.getAllSqlViewsNoAcl())
-            .stream().filter(view -> !view.isQuery()).sorted(reverseOrder()).collect(toList());
+            .stream().filter(view -> !view.isQuery()).sorted(reverseOrder()).toList();
     progress.startingStage("Drop SQL views", nonQueryViews.size(), SKIP_ITEM);
     progress.runStage(nonQueryViews, SqlView::getViewName, sqlViewService::dropViewTable);
   }
